# RAG-On-Obsidian

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  linter.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  check.py  pgvector.docker-compose.yml  pyproject.toml
backend/src/: app.py  config.py
backend/src/api/: general_dependencies.py
backend/src/api/index/: dependencies.py  router.py  schemas.py
backend/src/api/llm_tokens/: router.py  schemas.py
backend/src/api/messages/: dependencies.py  router.py  schemas.py
backend/src/api/settings/: dependencies.py  router.py  schemas.py
backend/src/database/: indexes.py  models.py  scripts.py  session.py
backend/src/obsirag_backend/: main.py
backend/src/obsirag_backend/api/messages/: contracts.py  routes.py
backend/src/repositories/index/: interface.py  sqlalchemy.py
backend/src/repositories/llm_tokens/: interface.py  sqlalchemy.py
backend/src/repositories/message/: interface.py  sqlalchemy.py
backend/src/repositories/settings/: interface.py  sqlalchemy.py
backend/src/services/embeddings_service/: base.py  mistralai.py
backend/src/services/index_service/: base.py  demo.py  final.py
backend/src/services/llm/: __init__.py  dummy.py  gigachat.py  llm_service.py  llm_service_builder.py
backend/src/services/llm_checker/: base.py  builder.py  dummy.py  gigachat.py  mistralai.py
backend/src/services/llm_service/: base.py  builder.py  dummy.py  gigachat.py  mistralai.py
backend/src/services/rag/: dummy.py
backend/src/services/rag_service/: base.py  demo.py  dummy.py  final.py
backend/src/services/vector_store_service/: base.py  pgvector.py
backend/src/utils/: decomposition.py  fastapi_cors.py  fastapi_lifespan.py  fastapi_spa.py  pca.py  text_splitter.py  update_vector_store.py
experiments/: README.md  requirements.txt
experiments/data/: data.csv  validation.csv  validation_dataset.csv
experiments/notebooks/: config.py  embedder.py  grid_search.ipynb  llama_index.ipynb  metrics.csv  metrics.py  mistral_validation.ipynb  retriever.py  test.ipynb  test_splitter.ipynb  text_splitter.py  utils.py  validation.ipynb  vector_db.py  visualization.ipynb
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: axios-config.ts  llm-tokens.ts  messages.ts  settings.ts  update-index.ts
frontend/src/components/message/: index.css  index.tsx
frontend/src/components/message-history/: index.tsx
frontend/src/hooks/: llm-tokens.ts  messages.ts  settings.ts  update-index.ts
frontend/src/layouts/basic-layout/: index.css  index.tsx
frontend/src/mock_data/: message.ts
frontend/src/router/: index.tsx
frontend/src/types/: general.ts  llm-tokens.ts  message.ts  messages.ts  settings.ts  update-index.ts
frontend/src/utils/: error-notifications.ts  format-datetime.ts  random-color.ts  success-notifications.ts  warning-notifications.ts
(+6 files in other folders)
