[project]
name = 'obsirag_backend'
version = "0.0.1"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3 :: Only',
]
requires-python = '>=3.11'
dependencies = [
  'fastapi~=0.115.5',
]

[project.optional-dependencies]
dev = [
  'pre-commit',
  'ruff',
  'pytest',
  'commitizen',
  'setuptools>=64',
]

[build-system]
requires = [
  'setuptools>=64',
]
build-backend = 'setuptools.build_meta'

[tool.commitizen]
name = 'cz_conventional_commits'
tag_format = '$version'
version_scheme = 'pep440'
version_provider = 'pep621'
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 120
