[tool.poetry]
name = "rag-on-obsidian-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.35"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.22"
aiohttp = "^3.11.9"
pgvector = "^0.3.6"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
aiofiles = "^24.1.0"
scikit-learn = "^1.6.0"
langchain = "^0.3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[project.optional-dependencies]
dev = [
  'ruff',
  'pytest',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = 'cz_conventional_commits'
tag_format = '$version'
version_scheme = 'pep440'
version_provider = 'pep621'
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
fix=true
unsafe-fixes=false
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["F401", "FA102", "D211", "D213", "D", "DTZ005", "FA100", "COM812", "ISC001", "G004", "PTH", "DTZ"]